Honeypot nodes 1 and 2 first working implementation

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Dependencies
 src/node_modules/
 src/honeypot-node1/node_modules/
+src/honeypot-node2/node_modules
+src/tests/node_modules
 
 # Logs
 *.log
