--- a/src/honeypot-node1/Dockerfile
+++ b/src/honeypot-node1/Dockerfile
@@ -1,30 +1,24 @@
-FROM node:18-alpine
+FROM node:22-alpine
 
 WORKDIR /app
 
-# Copy package files
-COPY package*.json ./
+COPY utils ./utils
 
-# Install dependencies
+COPY honeypot-node1/package*.json ./
+
 RUN npm install
 
-# Copy source code
-COPY . .
+COPY honeypot-node1 .
 
-# Build the Vue app
 RUN npm run build
 
-# Expose port
 EXPOSE 3001
 
-# Create non-root user
 RUN addgroup -g 1001 -S nodejs
 RUN adduser -S nodejs -u 1001
 
-# Change ownership
 RUN chown -R nodejs:nodejs /app
 
 USER nodejs
 
-# Start with Express server 
 CMD ["node", "honeypot-login.js"]
