--- a/src/honeypot-node2/package.json
+++ b/src/honeypot-node2/package.json
@@ -8,8 +8,9 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "dotenv": "^17.2.3",
+    "node-fetch": "^3.3.0",
     "socket.io-client": "^4.8.1",
-    "ssh2": "^1.15.0",
-    "node-fetch": "^3.3.0"
+    "ssh2": "^1.15.0"
   }
 }
