--- a/src/honeypot-node3/package.json
+++ b/src/honeypot-node3/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.0",
+    "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "multer": "^2.0.2",
     "socket.io-client": "^4.8.1",
     "vue": "^3.3.0"
   },
