--- a/src/dashboard-client/package.json
+++ b/src/dashboard-client/package.json
@@ -17,7 +17,9 @@
     "socket.io-client": "^4.8.1",
     "vue": "^3.5.24",
     "vue-chartjs": "^5.3.3",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
