--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
     - name: Start Containers
       run: |
         cd src
-        docker-compose up -d --build
+        docker compose up -d --build
         sleep 30 # Wait for services to be ready
 
     - name: Run Integration Tests
@@ -78,4 +78,4 @@ jobs:
       if: always()
       run: |
         cd src
-        docker-compose down
+        docker compose down
