--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,5 @@ Thumbs.db
 /src/collector-server/node_modules
 /src/dashboard-client/node_modules
 /src/mongo-data
+/src/ollama-data
 /docs_private
