--- a/src/collector-server/package.json
+++ b/src/collector-server/package.json
@@ -17,6 +17,8 @@
     "dockerode": "^4.0.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "groq": "^4.21.0",
+    "groq-sdk": "^0.37.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
