--- a/src/honeypot-node1/package.json
+++ b/src/honeypot-node1/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "groq": "^4.21.0",
+    "groq-sdk": "^0.37.0",
     "socket.io-client": "^4.8.1",
     "vue": "^3.3.0"
   },
