--- a/src/honeypot-node2/package.json
+++ b/src/honeypot-node2/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.6.0",
     "dotenv": "^17.2.3",
+    "groq-sdk": "^0.37.0",
     "node-fetch": "^3.3.0",
     "socket.io-client": "^4.8.1",
     "ssh2": "^1.15.0"
