--- a/src/dashboard-client/package.json
+++ b/src/dashboard-client/package.json
@@ -18,6 +18,7 @@
     "vue": "^3.5.24",
     "vue-chartjs": "^5.3.3",
     "vue-router": "^4.6.3",
+    "vue-toastification": "^2.0.0-rc.5",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0"
   },
