--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,8 @@ Thumbs.db
 # Docker
 *.tar
 
-/src/collector-server/node_modules
-/src/dashboard-client/node_modules
-/src/mongo-data
 /docs_private
+
+# Mosquitto broker
+src/mosquitto/data/
+src/mosquitto/log/
