--- a/src/collector-server/package.json
+++ b/src/collector-server/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
+    "mqtt": "^5.14.1",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.8.1"
   },
