--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -27,6 +27,25 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     user: root  
     privileged: true  
+
+  mosquitto:
+    image: eclipse-mosquitto:2.0
+    container_name: mosquitto
+    ports:
+      - "1883:1883"  
+    volumes:
+      - ./mosquitto/config/mosquitto.conf:/mosquitto/config/mosquitto.conf:ro
+      - ./mosquitto/data:/mosquitto/data
+      - ./mosquitto/log:/mosquitto/log
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD", "mosquitto_sub", "-h", "127.0.0.1", "-t", "healthcheck", "-C", "1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    restart: unless-stopped
     
   mongo1:
     image: mongo:6
