--- a/src/honeypot-node3/package.json
+++ b/src/honeypot-node3/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "groq": "^4.21.0",
     "groq-sdk": "^0.37.0",
+    "mqtt": "^5.14.1",
     "multer": "^2.0.2",
     "socket.io-client": "^4.8.1",
     "vue": "^3.3.0"
