--- a/src/honeypot-node3/package.json
+++ b/src/honeypot-node3/package.json
@@ -18,6 +18,7 @@
     "mqtt": "^5.14.1",
     "multer": "^2.0.2",
     "socket.io-client": "^4.8.1",
+    "sweetalert2": "^11.26.10",
     "vue": "^3.3.0"
   },
   "devDependencies": {
